Fix bot scope when installing

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <!-- Site made with Mobirise Website Builder v4.8.6, https://mobirise.com -->
     <meta charset="UTF-8">
@@ -42,7 +43,8 @@
 
                     <div class="mbr-section-btn align-center py-4">
                         <img alt="Add to Slack" src="assets/images/athena.png" /><br>
-                        <a href="/login"><img alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png"
+                        <a href="/login">
+                            <img alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png"
                                 srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" /></a>
                     </div>
                 </div>
@@ -83,7 +85,7 @@
                     <div class="card-box align-center">
                         <h4 class="card-title mbr-fonts-style display-7">Message Action</h4>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            Use <strong>Translate </strong>action from the actions menu for any Slack messages &nbsp;
+                            Use <strong>Translate </strong>action from the actions menu for any Slack messages. &nbsp;
                             &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                             &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                             &nbsp; &nbsp; &nbsp; &nbsp;</p>
@@ -256,7 +258,7 @@
             <div class="media-container-row content">
                 <div class="col-md-2 col-sm-4">
                     <div class="mb-3 img-logo">
-                        <a href="https://github.com/siquylee/slack-translator">
+                        <a href="#">
                             <img src="assets/images/athena-192x192.png" alt="Slack Translator" title="">
                         </a>
                     </div>
@@ -271,7 +273,11 @@
                 </div>
                 <div class="col-md-3 col-sm-4">
                     <p class="mb-4 mbr-fonts-style foot-title display-7"></p>
-                    <p class="mbr-text mbr-fonts-style mbr-links-column display-7"></p>
+                    <p class="mbr-text mbr-fonts-style mbr-links-column display-7">
+                        <a href="/login">
+                            <img alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png"
+                                srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" /></a>
+                    </p>
                 </div>
                 <div class="col-md-4 col-sm-12">
                     <p class="mb-4 mbr-fonts-style foot-title display-7"><strong>
